--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/ryannbrown/The-Charging-Buffalo#readme",
   "dependencies": {
+    "atob": "^2.1.2",
     "axios": "^0.19.0",
+    "btoa": "^1.2.1",
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
     "mongoose": "^5.6.0",
